Add about section

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,40 @@
 <body class="page">
   <main class="page__main">
 
+    <section class="about">
+      <h2 class="visually-hidden">About gallery</h2>
+      <div class="about__container container">
+        <div class="about__header">
+          <div class="about__header-container ">
+            <p class="about__title about__title--dark">Your day at the gallery</p>
+            <p class="about__text">
+              Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.
+            </p>
+          </div>
+          <picture class="about__image about__image--header">
+            <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-1.jpg 1x, ./images/desktop/image-grid-1@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-1.jpg 1x, ./images/tablet/image-grid-1@2x.jpg 2x">
+            <img src="./images/mobile/image-grid-1.jpg" srcset="./images/mobile/image-grid-1@2x.jpg 2x" width="343" height="480" alt="Exhibition at the gallery">
+          </picture>
+        </div>
+        <div class="about__text-container">
+          <p class="about__title">Come &amp; be inspired</p>
+          <p class="about__text">
+            We’re excited to welcome you to our gallery and see how our collections influence you.
+          </p>
+        </div>
+        <picture class="about__image about__image--large">
+          <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-2.jpg 1x, ./images/desktop/image-grid-2@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-2.jpg 1x, ./images/tablet/image-grid-2@2x.jpg 2x">
+          <img src="./images/mobile/image-grid-2.jpg" srcset="./images/mobile/image-grid-2@2x.jpg 2x" width="343" height="480" alt="Room at the gallery">
+        </picture>
+        <picture class="about__image about__image--small">
+          <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-3.jpg 1x, ./images/desktop/image-grid-3@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-3.jpg 1x, ./images/tablet/image-grid-3@2x.jpg 2x">
+          <img src="./images/mobile/image-grid-3.jpg" srcset="./images/mobile/image-grid-3@2x.jpg 2x" width="343" height="200" alt="Main hall at the gallery">
+        </picture>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer__container container">
