--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,20 @@
 </head>
 <body class="page">
   <main class="page__main">
-
+    <section class="promo">
+      <h1 class="promo__title">Modern <br>Art Gallery</h1>
+      <div class="promo__container">
+        <p class="promo__text">
+          The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.
+        </p>
+        <a href="./location.html" class="button">Our location</a>
+      </div>
+      <picture class="promo__image">
+        <source media="(min-width: 1200px)" srcset="./images/desktop/image-hero.jpg 1x, ./images/desktop/image-hero@2x.jpg 2x">
+        <source media="(min-width: 768px)" srcset="./images/tablet/image-hero.jpg 1x, ./images/tablet/image-hero@2x.jpg 2x">
+        <img src="./images/mobile/image-hero.jpg" srcset="./images/mobile/image-hero@2x.jpg 2x" width="375" height="240" alt="Visitors look at the exhibit in the gallery">
+      </picture>
+    </section>
     <section class="about">
       <h2 class="visually-hidden">About gallery</h2>
       <div class="about__container container">
@@ -23,7 +36,7 @@
           <picture class="about__image about__image--header">
             <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-1.jpg 1x, ./images/desktop/image-grid-1@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-1.jpg 1x, ./images/tablet/image-grid-1@2x.jpg 2x">
-            <img src="./images/mobile/image-grid-1.jpg" srcset="./images/mobile/image-grid-1@2x.jpg 2x" width="343" height="480" alt="Exhibition at the gallery">
+            <img src="./images/mobile/image-grid-1.jpg" srcset="./images/mobile/image-grid-1@2x.jpg 2x" width="343" height="480" alt="A gallery hall with a large number of exhibits">
           </picture>
         </div>
         <div class="about__text-container">
@@ -35,12 +48,12 @@
         <picture class="about__image about__image--large">
           <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-2.jpg 1x, ./images/desktop/image-grid-2@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-2.jpg 1x, ./images/tablet/image-grid-2@2x.jpg 2x">
-          <img src="./images/mobile/image-grid-2.jpg" srcset="./images/mobile/image-grid-2@2x.jpg 2x" width="343" height="480" alt="Room at the gallery">
+          <img src="./images/mobile/image-grid-2.jpg" srcset="./images/mobile/image-grid-2@2x.jpg 2x" width="343" height="480" alt="Visitors' bench in front of the painting in the gallery">
         </picture>
         <picture class="about__image about__image--small">
           <source media="(min-width: 1200px)" srcset="./images/desktop/image-grid-3.jpg 1x, ./images/desktop/image-grid-3@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="./images/tablet/image-grid-3.jpg 1x, ./images/tablet/image-grid-3@2x.jpg 2x">
-          <img src="./images/mobile/image-grid-3.jpg" srcset="./images/mobile/image-grid-3@2x.jpg 2x" width="343" height="200" alt="Main hall at the gallery">
+          <img src="./images/mobile/image-grid-3.jpg" srcset="./images/mobile/image-grid-3@2x.jpg 2x" width="343" height="200" alt="Main hall in the gallery where visitors look at exhibits">
         </picture>
       </div>
     </section>
