--- a/src/location.html
+++ b/src/location.html
@@ -5,10 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
   <title>Frontend Mentor | Art gallery website | Location</title>
 </head>
 <body class="page">
   <main class="page__main">
+    <section class="contacts">
+      <div class="contacts__container container">
+        <h1 class="contacts__title">Our location</h1>
+        <div class="contacts__text-container">
+          <p class="contacts__address">99 King Street</p>
+          <p class="contacts__text">
+            Newport<br>
+            RI 02840<br>
+            United States of America
+          </p>
+          <p class="contacts__text">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+        </div>
+      </div>
+      <div class="contacts__map">
+        <div class="contacts__btn-container container">
+          <a href="./index.html" class="button button--back">Back to Home</a>
+        </div>
+        <div id="map"></div>
+      </div>
+    </section>
   </main>
   <footer class="footer footer--inner">
     <div class="footer__container container">
@@ -44,5 +65,8 @@
       </ul>
     </div>
   </footer>
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+  <script src="./scripts/TileLayer.Grayscale.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
